# cv-tutorial-cap

./: .gitignore  README.md  cnnVStransformer.ipynb  create_venv.sh  detr.py  export_req.sh  intro.ipynb  owl.py  pyproject.toml  requirements.txt  rt-detr.py  yolov9.py
batch/: detr.ipynb  detr.py  model.py  owl.ipynb  owl.py
ic/: img_capt_blip.ipynb
od/batch/: detr.py
od/batch/rt/: detr.ipynb  detr.py  yolov5.ipynb  yolov5.py  yolov8.py
od/rt/: detr.py  yolov5.py  yolov8.ipynb  yolov8.py
rt/: cnnVStransformer.ipynb  detailed_diff_DETR_YOLO.ipynb  detr.ipynb  detr.py  yolov5.ipynb  yolov5.py  yolov8.ipynb  yolov8.py  yolov8s.ipynb
