[tool.poetry]
name = "cv-tutorial-cap"
version = "0.1.0"
description = ""
authors = ["Thivyesh Ahilathasan <a.thivy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.9.0.80"
transformers = "^4.40.1"
ultralytics = "^8.2.5"
timm = "^0.9.16"
supervision = "^0.20.0"
setuptools = "^69.5.1"
scikit-image = "^0.23.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
